--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">VirusGame</string>
     <string name="health">Health: </string>
+    <string name="play">Play</string>
 </resources>
