--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">VirusGame</string>
     <string name="health">Health: </string>
     <string name="play">Play</string>
+    <string name="knight">Knight:</string>
 </resources>
