--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,14 @@
     <string name="first_damage_advice">Ouch! Try to shake your device next time so you don\'t take damage. If your health hits 0, you\'ll die!</string>
     <string name="intro">A virus has broken out! Quick, swipe on the screen and take out that zombie!</string>
     <string name="first_defence">Great! Remember, you can\'t attack while a zombie has a hold of you.</string>
+    <string name="playerPreferenceId">player</string>
+    <string name="game_name">virusGame</string>
+    <string name="statsPreferenceId">gameStats</string>
+    <string name="eventPreferenceId">eventSave</string>
+    <string name="first_damage_taken_event_name">firstDamageEvent</string>
+    <string name="first_defence_event_name">firstDefence</string>
+    <string name="first_kill_event_name">firstKill</string>
+    <string name="first_time_playing_event_name">firstTimePlaying</string>
+    <string name="zombie_attack_event_name">zombieAttack</string>
+    <string name="welcome_back">Welcome back! Keep taking out those zombies!</string>
 </resources>
