--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,7 +9,7 @@
     <string name="intro">A virus has broken out! Quick, swipe on the screen and take out that zombie!</string>
     <string name="first_defence">Great! Remember, you can\'t attack while a zombie has a hold of you.</string>
     <string name="playerPreferenceId">player</string>
-    <string name="game_name">virusGame</string>
+    <string name="game_name_id">virusGame</string>
     <string name="statsPreferenceId">gameStats</string>
     <string name="eventPreferenceId">eventSave</string>
     <string name="first_damage_taken_event_name">firstDamageEvent</string>
@@ -18,4 +18,5 @@
     <string name="first_time_playing_event_name">firstTimePlaying</string>
     <string name="zombie_attack_event_name">zombieAttack</string>
     <string name="welcome_back">Welcome back! Keep taking out those zombies!</string>
+    <string name="game_name">Virus Game</string>
 </resources>
