--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,4 +19,5 @@
     <string name="zombie_attack_event_name">zombieAttack</string>
     <string name="welcome_back">Welcome back! Keep taking out those zombies!</string>
     <string name="game_name">Virus Game</string>
+    <string name="death_message">Oh no! You died! Never mind, upgrade your health and attack and try again!</string>
 </resources>
