Player can upgrade health/attack with gold on death

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,4 +20,5 @@
     <string name="welcome_back">Welcome back! Keep taking out those zombies!</string>
     <string name="game_name">Virus Game</string>
     <string name="death_message">Oh no! You died! Never mind, upgrade your health and attack and try again!</string>
+    <string name="not_enough_gold">You don\'t have enough gold!</string>
 </resources>
