--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,4 +23,5 @@
     <string name="not_enough_gold">You don\'t have enough gold!</string>
     <string name="abilityPreferenceId">ability</string>
     <string name="doubleDamage">DoubleDamage</string>
+    <string name="shop">Shop</string>
 </resources>
