Click listener added to shop items

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,4 +24,5 @@
     <string name="abilityPreferenceId">ability</string>
     <string name="doubleDamage">DoubleDamage</string>
     <string name="shop">Shop</string>
+    <string name="bought">BOUGHT</string>
 </resources>
