--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,4 +25,5 @@
     <string name="fireAbility">Fire Ability</string>
     <string name="shop">Shop</string>
     <string name="bought">BOUGHT</string>
+    <string name="x">X</string>
 </resources>
