Change knight to karl

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -33,4 +33,6 @@
     <string name="healthPotion">Health Potion</string>
     <string name="hugeHealthPotion">Huge Health Potion</string>
     <string name="largeHealthPotion">Large Health Potion</string>
+    <string name="karl">Karl</string>
+    <string name="tap">[tap]</string>
 </resources>
