Added boss hearts and changed attack and health upgrades to be payable by boss hearts

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -35,4 +35,5 @@
     <string name="largeHealthPotion">Large Health Potion</string>
     <string name="karl">Karl</string>
     <string name="tap">[tap]</string>
+    <string name="not_enough_boss_hearts">You don\'t have enough boss hearts!</string>
 </resources>
