--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -37,4 +37,9 @@
     <string name="tap">[tap]</string>
     <string name="not_enough_boss_hearts">You don\'t have enough boss hearts!</string>
     <string name="boss">BOSS</string>
+    <string name="settings">Settings</string>
+    <string name="vibration">Vibration</string>
+    <string name="music">Music</string>
+    <string name="sfx">SFX</string>
+    <string name="done">Done</string>
 </resources>
