--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -42,4 +42,5 @@
     <string name="music">Music</string>
     <string name="sfx">SFX</string>
     <string name="done">Done</string>
+    <string name="subFragment">subFragment</string>
 </resources>
