--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -57,4 +57,8 @@
     <string name="firstAbilityEventName">FirstAbility</string>
     <string name="firstAbilityMessage">Use two fingers to swipe at once to use your ability!</string>
     <string name="firstAbilityUsedMessage">Awesome! You gotta wait for it to cooldown to use it again though.</string>
+    <string name="clearData">Clear Data</string>
+    <string name="clearDataConfirmation">"Are you want to clear all save data? This will wipe everything you've achieved so far and send you back to the main menu. No backsies! "</string>
+    <string name="changedMyMind">I changed my mind!</string>
+    <string name="clearMyData">Clear my data!</string>
 </resources>
