--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">ViruSwiper</string>
-    <string name="health">Health: </string>
+    <string name="health">Health</string>
     <string name="play">Play</string>
     <string name="knight">Knight:</string>
     <string name="first_kill">Good, keep on taking out those zombies!</string>
@@ -65,4 +65,6 @@
     <string name="firstInvulnerableZombieEvent">Invulnerable Zombie Event</string>
     <string name="firstInvulnerableZombieMessage">These zombies will keep attacking without breaks! Use abilities to defeat them.</string>
     <string name="shopUnavailableMessage">You wanna buy something? You\'re gonna have to wait, we\'re not open yet.</string>
+    <string name="attack">Attack</string>
+    <string name="try_again">Try Again</string>
 </resources>
