--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -61,4 +61,5 @@
     <string name="cooldown">Cooldown</string>
     <string name="secs">s.</string>
     <string name="recovers">Stellt</string>
+    <string name="health_recover">Gesundheit wiederher</string>
 </resources>
