--- a/app/src/main/res/values-nb/strings.xml
+++ b/app/src/main/res/values-nb/strings.xml
@@ -61,4 +61,5 @@
     <string name="cooldown">Nedkjøling</string>
     <string name="secs">sekunder.</string>
     <string name="recovers">Gjenoppretter</string>
+    <string name="health_recover">helse</string>
 </resources>
