Shortened some french strings and fixed bug where shop wasn't showing any items

--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -2,17 +2,17 @@
     <string name="health">La santé</string>
     <string name="play">Jouer</string>
     <string name="first_kill">Bien, continue à liquider ces zombies!</string>
-    <string name="shake_advice">Vite! Secoue ton appareil, jusqu\'à ce que la barre bleue soit partie, afin de contrer l'attaque du zombie!</string>
-    <string name="first_damage_advice">Ouch! La prochaine fois, essaie de secouer ton appareil jusqu\'à ce que la barre soit épuisée pour ne pas subir de dégâts!</string>
-    <string name="intro">Un virus s\'est échappé! Vite, regarde autour de toi en utilisant ton appareil et déplace ton doigt sur l\'écran pour éliminer les zombies!</string>
+    <string name="shake_advice">Vite! Secoue ton appareil, jusqu\'à ce que la barre bleue soit partie, afin de contrer l\'attaque du zombie!</string>
+    <string name="first_damage_advice">La prochaine fois, essaie de secouer ton appareil jusqu\'à ce que la barre soit épuisée pour ne pas subir de dégâts!</string>
+    <string name="intro">Un virus s\'est échappé! Vite, regarde autour de toi et déplace ton doigt sur l\'écran pour éliminer les zombies!</string>
     <string name="first_defence">Bien! Rappelle-toi, tu ne peux pas attaquer quand un zombie te contrôle.</string>
     <string name="welcome_back">Content de te revoir! Continue à liquider ces zombies!</string>
     <string name="death_message">Oh non! Tu es mort! Ne t\'en fais pas, mets à jour tes stats avec ces coeurs de zombie et essaie à nouveau!</string>
     <string name="not_enough_gold">Tu n\'as pas assez d\'or!</string>
-    <string name="fireAbility">Attaque par le feu</string>
     <string name="shop">Boutique</string>
-    <string name="lightningAbility">Attaque par la foudre</string>
-    <string name="iceAbility">Attaque par la glace</string>
+    <string name="fireAbility">Attaque de feu</string>
+    <string name="lightningAbility">Attaque de foudre</string>
+    <string name="iceAbility">Attaque de glace</string>
     <string name="smallHealthPotion">Petite potion</string>
     <string name="healthPotion">Potion de vie</string>
     <string name="hugeHealthPotion">Très grande potion de vie</string>
@@ -48,7 +48,7 @@
     <string name="gold_tip">Quand les zombies meurent, ils déposent de l\'or. Tu devrais l\'utiliser pour acheter des objets dans le magasin.</string>
     <string name="abilities_tip">Les pouvoirs infligent plus de dégats qu\'un coup normal, mais ont besoin d\'un temps de récupération avant que tu puisses l\'utiliser à nouveau.</string>
     <string name="abilities_tip_2">Fais glisser tes deux doigts pour utiliser ton pouvoir.</string>
-    <string name="buying_abilities_tip">Une fois que tu as acheté un pouvoir, si il devient non-équipé, tu n\'as pas à l'acheter à nouveau dans cette course.</string>
+    <string name="buying_abilities_tip">Une fois que tu as acheté un pouvoir, si il devient non-équipé, tu n\'as pas à l\'acheter à nouveau dans cette course.</string>
     <string name="chest_tip">De temps en temps, tu verras un spawn apparaître dans un coffre, tu devras le frapper pour obtenir de l\'or, des coeurs de zombie ou des potions!</string>
     <string name="potion_tip">Les potions te guerissent. Tu peux les acheter au magasin ou les trouver dans les coffres.</string>
     <string name="death_tip">Si ta santé atteint 0, ne t\'nquiètes pas ! Tu peux mettre à jour tes stats en utilisant tes coeurs de zombie et recommencer.</string>
@@ -57,8 +57,8 @@
     <string name="attack">L\'attaque</string>
     <string name="wave">Vague</string>
     <string name="deals">Donne</string>
-    <string name="damage">plus de dégâts</string>
-    <string name="cooldown">Temps de récupération:</string>
+    <string name="damage">dégâts</string>
+    <string name="cooldown">Temps de recharge</string>
     <string name="secs">sec.</string>
     <string name="recovers">Récupère</string>
     <string name="health_recover">de santé</string>
