--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -10,9 +10,9 @@
     <string name="death_message">Oh non! Tu es mort! Ne t\'en fais pas, mets à jour tes stats avec ces coeurs de zombie et essaie à nouveau!</string>
     <string name="not_enough_gold">Tu n\'as pas assez d\'or!</string>
     <string name="shop">Boutique</string>
-    <string name="fireAbility">Attaque de feu</string>
-    <string name="lightningAbility">Attaque de foudre</string>
-    <string name="iceAbility">Attaque de glace</string>
+    <string name="fireAbility">Attaque du feu</string>
+    <string name="lightningAbility">Attaque de la foudre</string>
+    <string name="iceAbility">Attaque de la glace</string>
     <string name="smallHealthPotion">Petite potion</string>
     <string name="healthPotion">Potion de vie</string>
     <string name="hugeHealthPotion">Très grande potion de vie</string>
@@ -44,12 +44,12 @@
     <string name="tips">Les indices</string>
     <string name="rotate_device_tip">Tourne ton appareil et trouve les zombies. Quand tu en as trouvé un, donne lui un grand coup pour lui infliger des dégats!</string>
     <string name="shake_tip">Quand un zombie sera en train de t\'attaquer, il levera ses bras et ton appareil vibrera en même temps.</string>
-    <string name="shake_tip_2">Quand un zombie est en train de t\'attaquer, secoue ton appareil, jusqu\'à ce que la barre bleue au dessus de sa tête soit épuisée, pour te défendre.</string>
+    <string name="shake_tip_2">Pour te défendre, quand un zombie t\'attaque, secoue ton appareil jusqu\'à ce que la barre bleue disparaisse.</string>
     <string name="gold_tip">Quand les zombies meurent, ils déposent de l\'or. Tu devrais l\'utiliser pour acheter des objets dans le magasin.</string>
-    <string name="abilities_tip">Les pouvoirs infligent plus de dégats qu\'un coup normal, mais ont besoin d\'un temps de récupération avant que tu puisses l\'utiliser à nouveau.</string>
+    <string name="abilities_tip">Les pouvoirs sont puissants mais nécessitent un temps de récupération entre deux utilisations.</string>
     <string name="abilities_tip_2">Fais glisser tes deux doigts pour utiliser ton pouvoir.</string>
     <string name="buying_abilities_tip">Une fois que tu as acheté un pouvoir, si il devient non-équipé, tu n\'as pas à l\'acheter à nouveau dans cette course.</string>
-    <string name="chest_tip">De temps en temps, tu verras un spawn apparaître dans un coffre, tu devras le frapper pour obtenir de l\'or, des coeurs de zombie ou des potions!</string>
+    <string name="chest_tip">Quand un coffre apparaît, clique dessus pour obtenir de l\'or, des coeurs de zombie ou des potions.</string>
     <string name="potion_tip">Les potions te guerissent. Tu peux les acheter au magasin ou les trouver dans les coffres.</string>
     <string name="death_tip">Si ta santé atteint 0, ne t\'nquiètes pas ! Tu peux mettre à jour tes stats en utilisant tes coeurs de zombie et recommencer.</string>
     <string name="health_recovery_zombie_tip">Les zombies blonds guérissent, bats-les rapidement!</string>
