--- a/app/src/main/res/values-ar/strings.xml
+++ b/app/src/main/res/values-ar/strings.xml
@@ -62,4 +62,5 @@
     <string name="secs">ثوانى</string>
     <string name="recovers">يتعافى</string>
     <string name="health_recover">الصحة</string>
+    <string name="credits">الاعتمادات</string>
 </resources>
