--- a/app/src/main/res/values-bg/strings.xml
+++ b/app/src/main/res/values-bg/strings.xml
@@ -62,4 +62,5 @@
     <string name="secs">сек</string>
     <string name="recovers">Въстановява</string>
     <string name="health_recover">кръв</string>
+    <string name="credits">кредити</string>
 </resources>
