--- a/app/src/main/res/values-da/strings.xml
+++ b/app/src/main/res/values-da/strings.xml
@@ -62,4 +62,5 @@
     <string name="secs">s</string>
     <string name="recovers">Gendanner</string>
     <string name="health_recover">helbred</string>
+    <string name="credits">Kreditter</string>
 </resources>
