--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -62,4 +62,5 @@
     <string name="secs">s</string>
     <string name="recovers">Recupera</string>
     <string name="health_recover">de salud</string>
+    <string name="credits">Créditos</string>
 </resources>
