--- a/app/src/main/res/values-et/strings.xml
+++ b/app/src/main/res/values-et/strings.xml
@@ -62,4 +62,5 @@
     <string name="secs">sek</string>
     <string name="recovers">Uuendab</string>
     <string name="health_recover">tervist</string>
+    <string name="credits">Krediiti</string>
 </resources>
