--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -62,4 +62,5 @@
     <string name="secs">sec.</string>
     <string name="recovers">Récupère</string>
     <string name="health_recover">de santé</string>
+    <string name="credits">Crédits</string>
 </resources>
