--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -62,4 +62,5 @@
     <string name="secs">s</string>
     <string name="recovers">Recupera</string>
     <string name="health_recover">salute</string>
+    <string name="credits">Crediti</string>
 </resources>
