--- a/app/src/main/res/values-pl/strings.xml
+++ b/app/src/main/res/values-pl/strings.xml
@@ -62,4 +62,5 @@
     <string name="recovers">Odnawia</string>
     <string name="health_recover">życia</string>
     <string name="attack">Atak</string>
+    <string name="credits">Kredyty</string>
 </resources>
