--- a/app/src/main/res/values-sl/strings.xml
+++ b/app/src/main/res/values-sl/strings.xml
@@ -62,4 +62,5 @@
     <string name="secs">s</string>
     <string name="recovers">Dobi nazaj</string>
     <string name="health_recover">zdravja</string>
+    <string name="credits">Kreditov</string>
 </resources>
